Include left/right images

--- a/carnd-projects/CarND-Behavioral-Cloning/train.config
+++ b/carnd-projects/CarND-Behavioral-Cloning/train.config
@@ -1,8 +1,10 @@
 {
-    "epochs": 10,
+    "epochs": 20,
     "batch_size": 64,
     "evaluate_at": 50,
-    "model_file" : "model.h5",
+    "use_side_cameras": false,
+    "init_model" : "base_model.h5",
+    "output_model" : "model.h5",
     "data_file": "data/driving_log.csv"
 }
 
